fix layout bug

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,9 +13,9 @@ body {
   min-height: 100%;
   height: auto;
   /* Negative indent footer by its height */
-  margin: 0 auto -60px;
+  margin-bottom: -60px;
   /* Pad bottom by footer height */
-  padding: 0 0 60px;
+  padding-bottom: 60px;
 }
 
 /* Set the fixed height of the footer here */
